fix: spacing of figma comparison

--- a/styles/Project.scss
+++ b/styles/Project.scss
@@ -95,7 +95,7 @@
       p {
         line-height: 40px;
         font-size: 1.2rem;
-        width: 75%;
+        width: 100%;
         max-width: 600px;
         @media (max-width: 976px) {
           font-size: 1rem;
@@ -107,13 +107,17 @@
       display: grid;
       place-items: center;
       text-align: center;
-      grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      margin: 2rem auto;
       gap: 2rem;
       .figma-1 {
         padding: 1rem;
         img {
           width: 75%;
           border-radius: 20px;
+          @media (max-width: 976px) {
+            width: 90%;
+          }
         }
       }
       .figma-2 {
@@ -121,6 +125,9 @@
         img {
           width: 75%;
           border-radius: 20px;
+          @media (max-width: 976px) {
+            width: 90%;
+          }
         }
       }
     }
